gcc/testsuite/rust/rustc/ui/parser/issue-17718-const-mut.rs
const
mut // { dg-error "" "" { target *-*-* } }
// { help "" "" { target *-*-* } .-2 }
FOO: usize = 3;

fn main() {
}

